SR-319: Simplify System Register API for adding systems