@@ -2,74 +2,66 @@ package uk.gov.digital.ho.systemregister.domain;
 
 import org.junit.jupiter.api.Test;
 import uk.gov.digital.ho.systemregister.application.messaging.commands.AddSystemCommand;
-import uk.gov.digital.ho.systemregister.helpers.TestDataUtil;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static uk.gov.digital.ho.systemregister.helpers.builders.AddSystemCommandBuilder.anAddSystemCommand;
 import static uk.gov.digital.ho.systemregister.helpers.builders.SR_SystemBuilder.aSystem;
 
 public class SystemRegisterTest {
-    TestDataUtil util = new TestDataUtil();
-
     @Test
-    public void addSystem_toEmptyRegister() {
+    public void addSystem_toEmptyRegister() throws DuplicateSystemException {
         SystemRegister systemRegister = new SystemRegister(new ArrayList<>());
-        AddSystemCommand cmd = util.n_add_system_command.build();
+        AddSystemCommand command = anAddSystemCommand().build();
 
-        AddSystemResult actual = systemRegister.addSystem(cmd.toSystemData());
+        SR_System addedSystem = systemRegister.addSystem(command.toSystemData());
 
-        assertEquals(Change.ADDED, actual.result);
-        assertTrue(actual.system.lastUpdated.compareTo(cmd.getTimestamp()) > 0);
-        util.expectSystemToBeCorrect(cmd, actual.system);
+        assertThat(addedSystem.lastUpdated).isAfterOrEqualTo(command.getTimestamp());
+        assertThat(addedSystem).isEqualTo(command.toSystemData());
     }
 
     @Test
-    public void addSystem_duplicate_name_not_added() {
+    public void raisesExceptionWhenDuplicateIsAdded() {
         String duplicateSystemName = "Duplicate Sys";
-        SR_System seedSystem = util.an_sr_system.withName(duplicateSystemName).build();
-        SystemRegister systemRegister = new SystemRegister(Arrays.asList(seedSystem));
-        AddSystemCommand cmd_1 = util.n_add_system_command.withName(duplicateSystemName).build();
+        SR_System seedSystem = aSystem().withName(duplicateSystemName).build();
+        SystemRegister systemRegister = new SystemRegister(List.of(seedSystem));
+        AddSystemCommand command = anAddSystemCommand().withName(duplicateSystemName).build();
 
-        AddSystemResult actual = systemRegister.addSystem(cmd_1.toSystemData());
-
-        assertEquals(Change.DUPLICATE, actual.result);
-        assertEquals(seedSystem.id, actual.system.id);
+        assertThatThrownBy(() -> systemRegister.addSystem(command.toSystemData()))
+                .isInstanceOf(DuplicateSystemException.class);
     }
 
     @Test
-    public void addSystem_not_empty_register() {
+    public void addSystem_not_empty_register() throws DuplicateSystemException {
         String existingSystemName = "existing system";
         String addedSystemName = "added system";
-        SR_System seedSystem = util.an_sr_system.withName(existingSystemName).build();
-        SystemRegister systemRegister = new SystemRegister(Arrays.asList(seedSystem));
-        AddSystemCommand cmd_1 = util.n_add_system_command.withName(addedSystemName).build();
+        SR_System seedSystem = aSystem().withName(existingSystemName).build();
+        SystemRegister systemRegister = new SystemRegister(List.of(seedSystem));
+        AddSystemCommand command = anAddSystemCommand().withName(addedSystemName).build();
 
-        AddSystemResult actual = systemRegister.addSystem(cmd_1.toSystemData());
+        SR_System addedSystem = systemRegister.addSystem(command.toSystemData());
 
-        assertEquals(Change.ADDED, actual.result);
-        assertNotEquals(seedSystem.id, actual.system.id);
+        assertNotEquals(seedSystem.id, addedSystem.id);
     }
 
     @Test
-    public void addTwoSystems() {
+    public void addTwoSystems() throws DuplicateSystemException {
         String systemA = "system A";
         String systemB = "system B";
         SystemRegister systemRegister = new SystemRegister(new ArrayList<>());
-        AddSystemCommand cmd_1 = util.n_add_system_command.withName(systemA).build();
-        AddSystemCommand cmd_2 = util.n_add_system_command.withName(systemB).build();
+        AddSystemCommand firstCommand = anAddSystemCommand().withName(systemA).build();
+        AddSystemCommand secondCommand = anAddSystemCommand().withName(systemB).build();
 
-        systemRegister.addSystem(cmd_1.toSystemData());
-        systemRegister.addSystem(cmd_2.toSystemData());
+        systemRegister.addSystem(firstCommand.toSystemData());
+        systemRegister.addSystem(secondCommand.toSystemData());
 
-        var actual = systemRegister.getAllSystems();
+        var systems = systemRegister.getAllSystems();
 
-        assertThat(actual)
+        assertThat(systems)
                 .extracting("name")
                 .containsExactlyInAnyOrder(systemA, systemB);
     }
@@ -81,9 +73,9 @@ public class SystemRegisterTest {
                 .build();
         SystemRegister systemRegister = new SystemRegister(List.of(system));
 
-        var actual = systemRegister.getSystemById(789);
+        var retrievedSystem = systemRegister.getSystemById(789);
 
-        assertThat(actual).contains(system);
+        assertThat(retrievedSystem).contains(system);
     }
 
     @Test
@@ -93,9 +85,9 @@ public class SystemRegisterTest {
                 .build();
         SystemRegister systemRegister = new SystemRegister(List.of(system));
 
-        var actual = systemRegister.getSystemById(123);
+        var retrievedSystem = systemRegister.getSystemById(123);
 
-        assertThat(actual).isEmpty();
+        assertThat(retrievedSystem).isEmpty();
     }
 
     // todo test to check copy system list , mutation safe
